<resources>
    <string name="app_name">Pirate Man</string>
    <string name="points">Booty:</string>
    <string name="move_left">Left</string>
    <string name="move_right">Right</string>
    <string name="move_up">Up</string>
    <string name="move_down">Down</string>
    <string name="action_settings">Settings</string>
    <string name="newgame">New Adventure</string>
    <string name="restartGame">Restart Game</string>
    <string name="textview">Time on the sea</string>
    <string name="reminding">Argg check your time pirate: 60 secs</string>
</resources>

